# dev-sandbox

./: .editorconfig  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  AUDIT_2026-06-08.md  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml  ruff.toml
backend/docs/: vpn_server_setup_guide.md
backend/migrations/: 016_subscription_plans.sql  017_referral_codes.sql  018_referral_relationships.sql  019_referral_balances.sql  020_subscription_snapshots_extend.sql  021_referral_relationships_fix_unique.sql  022_user_emails.sql  023_email_verification_codes.sql  024_vpn_servers.sql  025_trial_period.sql  026_notification_state.sql  027_vpn_servers_reality.sql  028_subscription_tokens.sql  029_vpn_servers_encrypted_password.sql  030_user_vless_uuid.sql  031_subscription_token_ttl.sql  032_jwt_revocation.sql  033_notification_indexes.sql  034_subscription_plans_days.sql  035_update_plan_prices.sql  036_vpn_servers_grpc.sql  036_vpn_servers_transport.sql  037_vpn_servers_cdn_helsinki.sql  038_vpn_servers_remove_grpc.sql  039_vpn_servers_rename_labels.sql  040_vpn_servers_fix_tcp_label_emoji.sql  041_vpn_servers_remove_flag_prefix.sql  042_vpn_servers_frankfurt.sql  043_vpn_servers_api_token.sql  044_vpn_servers_yandex_relay.sql  045_vpn_servers_yandex_ip_update.sql  046_vpn_servers_lte_sni_max_ru.sql  047_vpn_servers_reality_fp.sql  048_referral_transactions_unique_desc.sql  049_drop_empty_notification_state.sql  050_drop_lte_servers.sql  052_remove_cdn_transport.sql  (+2 more)
(+535 files in other folders)
