[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot-vpn-backend"
version = "0.1.0"
description = "Slice 1 control-plane backend (UC-01/UC-02 primitives)"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29,<1",
  "httpx>=0.27,<1",
  "starlette>=0.38,<0.41",
  "uvicorn>=0.30,<1",
  "cryptography>=43,<44",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.26",
]
type = [
  "mypy>=1.10,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false
check_untyped_defs = true
